# ghc-timings-report

./: .gitignore  CHANGELOG.md  Main.hs  README.markdown  cabal.project  ghc-timings.cabal
files/: main.css  module.template.gnuplot  package.template.gnuplot
report-example/: HaskellNet-0.6.csv  HaskellNet-0.6.html  index.html  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--Compat.dump-timings.csv  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--Compat.dump-timings.html  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--Compat.dump-timings.json  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--Auth.dump-timings.csv  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--Auth.dump-timings.html  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--Auth.dump-timings.json  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--BSStream.dump-timings.csv  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--BSStream.dump-timings.html  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--BSStream.dump-timings.json  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--Debug.dump-timings.csv  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--Debug.dump-timings.html  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--Debug.dump-timings.json  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--IMAP--Connection.dump-timings.csv  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--IMAP--Connection.dump-timings.html  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--IMAP--Connection.dump-timings.json  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--IMAP--Parsers.dump-timings.csv  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--IMAP--Parsers.dump-timings.html  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--IMAP--Parsers.dump-timings.json  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--IMAP--Types.dump-timings.csv  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--IMAP--Types.dump-timings.html  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--IMAP--Types.dump-timings.json  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--IMAP.dump-timings.csv  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--IMAP.dump-timings.html  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--IMAP.dump-timings.json  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--POP3--Connection.dump-timings.csv  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--POP3--Connection.dump-timings.html  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--POP3--Connection.dump-timings.json  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--POP3--Types.dump-timings.csv  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--POP3--Types.dump-timings.html  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--POP3--Types.dump-timings.json  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--POP3.dump-timings.csv  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--POP3.dump-timings.html  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--POP3.dump-timings.json  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--SMTP--Internal.dump-timings.csv  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--SMTP--Internal.dump-timings.html  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--SMTP--Internal.dump-timings.json  x86_64-osx--ghc-8.10.3--HaskellNet-0.6--src--Network--HaskellNet--SMTP.dump-timings.csv  (+8 more)
src/: Compare.hs  Generate.hs  GhcBuildPhase.hs  GhcFile.hs  Report.hs
