cabal-version:       >=1.10
name:                ghc-timings-report
version:             0.1.0.0
synopsis:            Get statistical report about how long files were compiled.
description:         Simple package that can gather information about compilation
                     time for later analysis.
bug-reports:         https://github.com/qnikst/ghc-timings-report
license:             MIT
author:              Alexander Vershilov
maintainer:          alexander.vershilov@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable ghc-timings
  main-is:             Main.hs
  other-modules:       GhcFile
                       GhcBuildPhase
                       Report
  hs-source-dirs:      src
                       .
  default-extensions:  DerivingStrategies
                       DeriveGeneric
                       DeriveAnyClass
                       DerivingVia
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ViewPatterns
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14,
                       aeson,
                       binary,
                       blaze-html,
                       blaze-markup,
                       bytestring,
                       cassava,
                       conduit >= 1.3,
                       containers,
                       directory,
                       resourcet,
                       filepath,
                       text,
                       text-show,
                       vector
  ghc-options: -Wall -Werror
  default-language:    Haskell2010
