cabal-version:       >=1.10
synopsis:            Get statistical report about how long files were compiled.
description:         Simple package that can gather information about compilation
                     time for later analysis.
bug-reports:         https://github.com/qnikst/ghc-timings-report
name:                ghc-timings
version:             0.1
license:             MIT
author:              Alexander Vershilov
maintainer:          alexander.vershilov@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable ghc-timings
  main-is:             Main.hs
  other-modules:       Compare
                       GhcFile
                       GhcBuildPhase
                       Generate
                       Report
  hs-source-dirs:      src
                       .
  default-extensions:  DerivingStrategies
                       DeriveGeneric
                       DeriveAnyClass
                       DerivingVia
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ViewPatterns
  -- other-extensions:
  build-depends:       base >=4.13 && <4.16,
                       aeson,
                       binary,
                       blaze-colonnade,
                       blaze-html,
                       blaze-markup,
                       bytestring,
                       cassava,
                       colonnade,
                       conduit >= 1.3,
                       containers,
                       directory,
                       resourcet,
                       filepath,
                       optparse-applicative,
                       process,
                       text,
                       text-show,
                       vector
  ghc-options: -Wall -Werror
  default-language:    Haskell2010
